# gha-sandbox

./: .gitignore  .gitmodules  CHANGELOG.md  LICENSE  README.md  ReadFile.hs  cabal.haskell-ci  cabal.project  gha-sandbox.cabal  github.yml.patch
.github/workflows/: ci.yml  haskell-ci.yml  nix.yml
exe/: Main.hs
src/: MyLib.hs
