cabal-version:       >=1.10
name:                gha-sandbox
version:             0.1
synopsis:            Testing grounds for GitHub Actions
description:         Testing grounds for GitHub Actions.
homepage:            https://github.com/RyanGlScott/gha-sandbox
-- bug-reports:
license:             BSD3
license-file:        LICENSE
author:              Ryan Scott
maintainer:          Ryan Scott <ryan.gl.scott@gmail.com>
-- copyright:
category:            Testing
build-type:          Simple
extra-source-files:  CHANGELOG.md, README.md
tested-with:         GHC == 8.10.3

source-repository head
  type:                git
  location:            https://github.com/RyanGlScott/gha-sandbox

library
  exposed-modules:     MyLib
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.13 && <4.15
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite gha-sandbox-test
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             MyLibTest.hs
  build-depends:       base >=4.13 && <4.15
