cabal-version:       >=1.10
name:                gha-sandbox
version:             0.1
synopsis:            Testing grounds for GitHub Actions
description:         Testing grounds for GitHub Actions.
homepage:            https://github.com/RyanGlScott/gha-sandbox
-- bug-reports:
license:             BSD3
license-file:        LICENSE
author:              Ryan Scott
maintainer:          Ryan Scott <ryan.gl.scott@gmail.com>
-- copyright:
category:            Testing
build-type:          Simple
extra-source-files:  CHANGELOG.md, README.md
tested-with:         GHC == 9.2.2

source-repository head
  type:                git
  location:            https://github.com/RyanGlScott/gha-sandbox

library
  exposed-modules:     MyLib
  -- other-modules:
  -- other-extensions:
  build-depends:       base >= 4 && < 5, clock, distributive
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall

executable gha-sandbox
  main-is:             Main.hs
  build-depends:       base, gha-sandbox
  hs-source-dirs:      exe
  default-language:    Haskell2010
  ghc-options:         -Wall
